# -

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE (MIT)  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: causal.py  core.py  emotion_engine.py  executor.py  memory.py  rl_trainer.py  self_discovery.py
case_studies/: iot_emotion_case_study.md  manic_episode_case_study.md  trapped_episode_case_study.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  INSTALLATION.md
scripts/: analyze_emotions.py
