[tool.poetry]
name = "kuromi-agent-framework"
version = "3.0.0"
description = "Sentience research platform prototype for emotional AI."
authors = ["Juliasudo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.103.1"
uvicorn = {extras=["standard"], version="^0.23.2"}
qdrant-client = "^1.7.1"
neo4j = "^5.9.0"
timescaleclient = "^0.1.2"
ray = "^2.6.0"
solana = "^0.26.4"
openai = "^0.29.0"
dowhy = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
